04-k8s-networking/99-ingress/04-using-TLS-certificates/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-tls
spec:
  tls:
    - hosts:
        - tls.example.com
      secretName: tls-secret
  rules:
  - host: tls.example.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: hello-world-service-single
            port: 
              number: 80
